--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -624,3 +624,43 @@ setup toàn thẻ a
         transform: translateY(0);
     }
 }
+
+
+
+.pc,
+.tablet,
+.mobile{
+    background-color: #fff;
+}
+
+
+/* 
+Mobile : width < 740px
+*/
+@media only screen and (max-width : 46.1875em) {
+    .mobile{
+        display: block;
+    }
+}
+
+
+
+/* 
+tablet : width >= 740px and width < 1024px
+*/
+@media only screen and (min-width : 46.25em) and (max-width:63.9375em) {
+    .tablet{
+        display: block;
+    }
+}
+
+
+
+/* 
+PC : width >= 1024px
+*/
+@media only screen and (min-width:64em) {
+    .pc{
+        display: block;
+    }
+}
