--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,10 @@ html{
     margin-top: 16px !important;
 }
 
+.mt-16 {
+    margin-top: 32px !important;
+}
+
 .btn{
     background-color: #000;
     color: #fff;
@@ -69,6 +73,7 @@ html{
     display: inline-block; /*Không để nút bị tràn ra khỏi giao diện*/
     margin: 5px 0 15px;
     text-decoration: none;
+    text-align: center;
 }
 
 .btn:hover {
@@ -107,6 +112,7 @@ html{
     left: 0;
     right: 0;
     z-index: 1; /*làm thanh công cụ nổi lên không bị chìm vào ảnh slider*/
+    /* overflow: hidden; Ẩn Tất cả thuộc tính bị thừa ra khỏi thằng thẻ cha */
 }
 
 /* thanh navigation đến đâu thì chỉ đến đó, còn nếu để block thì nó sẽ dài hết cả trang */
@@ -153,7 +159,7 @@ setup toàn thẻ a
 #nav li a {
     text-decoration: none; /*Bỏ gạch dưới của thẻ a */
     line-height: 46px; /* Canh Giữa khi kéo chuột để copy */
-    padding: 0 24px; /* xét cho vùng padding trên dưới =0 và trái phải 24px */
+    padding: 1px 24px; /* xét cho vùng padding trên dưới =0 và trái phải 24px */
     display: block; /* Setup kích thước thẻ a cho khớp khi rê chuột qua */
 }
 
@@ -203,20 +209,36 @@ setup toàn thẻ a
    font-size: 14px;
 }
 
-
+#header .mobile-menu-btn,
 #header .search-btn{
     float: right;
     cursor: pointer; /* Thay Đổi trỏ chuột*/
 }
 
 
-#header .search-btn:hover {
-    background-color: #f44336;
+#header .mobile-menu-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 
 
+#header .mobile-menu-btn:hover,
+#header .search-btn:hover {
+    background-color: #f44336;
+}
 
+#header .mobile-menu-btn:hover {
+    background-color: #ccc;
+}
+
+#header .mobile-menu-btn:hover .menu-icon{
+    color: #000;
+}
+
+
+#header .menu-icon,
 #header .search-icon{
     color: #fff;
     font-size: 20px;
@@ -259,9 +281,10 @@ setup toàn thẻ a
 
 #content .content-section{
     width: 800px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding: 40px 0 112px;
+    padding: 40px 16px 112px 16px;
 }
 
 
@@ -295,7 +318,7 @@ setup toàn thẻ a
 
 
 #content .members-list{
-    margin-top: 30px;
+    margin-top: 32px;
     /*ÔM trọn DIV con khi dùng  float: left;*/
 
 }
@@ -372,7 +395,7 @@ setup toàn thẻ a
 
 .places-list{
     /* margin: 32px -8px 50px; */
-    margin-top: 32px;
+    margin-top: 16px;
     /* margin-bottom: 32px; */
     
 }
@@ -531,6 +554,11 @@ setup toàn thẻ a
 }
 
 
+.contact-form {
+    font-size: 15px;
+}
+
+
 .contact-content{
     margin-top: 48px;
 }
@@ -583,18 +611,18 @@ setup toàn thẻ a
 }
 
 
-#footer .sosials-list{
+#footer .socials-list{
     font-size: 24px;
 
 }
 
 
-#footer .sosials-list a{
+#footer .socials-list a{
     text-decoration: none;
     color: rgba(0, 0, 0, 0.7);
 }
 
-#footer .sosials-list a:hover{
+#footer .socials-list a:hover{
     color: rgba(0, 0, 0, 0.4);
 }
 
