--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -34,8 +34,16 @@ tablet : width >= 740px and width < 1024px
         padding: 15px 16px;
     }
 
+    #nav .subnav a {
+        padding: 5px 12px;
+    }
+
     .contact-form .form-control {
         padding: 15px;
+    }
+
+    .contact-info {
+        line-height: 2.0;
     }
 
     .socials-list {
@@ -46,11 +54,17 @@ tablet : width >= 740px and width < 1024px
         margin: 0 8px;
     }
 
+    #footer .copyright {
+        padding: 12px 0;
+        display: inline-block;
+        color: rgba(0,0,0,0.6);
+    }
+
 }
 
 
 /* 
-Mobile : width < 740px
+Mobile : width < 740px ==> max-width : 739px = 46.1875em
 */
 @media only screen and (max-width : 46.1875em) {
     #nav {
@@ -106,7 +120,7 @@ Mobile : width < 740px
     }
 
     .contact-form {
-        margin-top: 16px;
+        margin-top: 32px;
     }
 
     
