--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,7 +250,7 @@ setup toàn thẻ a
     position: relative;
     margin-top: 46px; /*cách trên cùng 46px*/
     padding-top: 50%; /*50% của chính nó*/
-    background: url('/assets/img/slider/slider1.jpg') top center / cover no-repeat;
+    background: url('../img/slider/slider1.jpg') top center / cover no-repeat;
 
 }
 
@@ -271,6 +271,7 @@ setup toàn thẻ a
 #slider .text-description {
     font-size: 15px;
     margin-top: 25px;
+    text-shadow: 0,0,1px,#000;/*rõ chữ bóng*/
 } 
 
 
@@ -576,6 +577,16 @@ setup toàn thẻ a
     display: inline-block;
 }
 
+.contact-info a {
+    color:#0b45f1;
+    opacity: 0.7;
+}
+
+
+.contact-info a:hover {
+    opacity: 1;
+}
+
 .contact-form{
     font-size: 15px;
 }
@@ -593,6 +604,8 @@ setup toàn thẻ a
     padding: 10px 16px;
     float: right;
     outline: none; /* bỏ màu mỗi lần bấm vào input*/
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 
@@ -663,7 +676,7 @@ setup toàn thẻ a
 
 
 /* 
-Mobile : width < 740px
+Mobile : width < 740px ==> max-width : 739px = 46.1875em
 */
 @media only screen and (max-width : 46.1875em) {
     .mobile{
